Use libtool -version-number rather than -release
Using the -release flag results in having to recompile downstream
libraries that use pion. This patch allows the libtool to create
symlinked libraries than can be correctly used in a normal
workflow. The version info is derived from the semantic package
numbering system. It allows for the minor version to reach 99 before
there will be an error.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,7 +14,7 @@ libpion_la_SOURCES = \
 	http_parser.cpp http_plugin_server.cpp http_reader.cpp http_server.cpp \
 	http_types.cpp http_writer.cpp
 
-libpion_la_LDFLAGS = -no-undefined -release $(PION_LIBRARY_VERSION)
+libpion_la_LDFLAGS = -no-undefined -version-number $(subst .,:,$(PACKAGE_VERSION))
 libpion_la_LIBADD = @PION_EXTERNAL_LIBS@
 
 EXTRA_DIST = *.vcxproj *.vcxproj.filters
